# pypi-provenance-auth

./: Cargo.toml  README.md
src/: args.rs  attestation.rs  certificate.rs  errors.rs  main.rs
test_data/: cryptography-43.0.3.provenance  sigstore-3.5.1.provenance
